# Rusticate

./: README.md
graham-scan/: Cargo.toml  README.md  points.txt
graham-scan/src/: main.rs  points.rs
lzw/: Cargo.toml  README.md
lzw/benches/: README.md  lzw_sequences.in  lzw_trie_benchmark.rs
lzw/src/: alphabets.rs  lzw_code.rs  lzw_codes.rs  lzw_dict.rs  lzw_token.rs  main.rs  stateful_trie_dict.rs  trie_dictionary.rs
mutable-trie/: Cargo.toml
mutable-trie/benches/: README.md  lzw_trie_benchmark.rs  trie_benchmark.rs
mutable-trie/src/: lib.rs  main.rs
rockerino/: Cargo.toml
rockerino/src/: main.rs
yew-rocket/: Cargo.toml
yew-rocket/backend/: Cargo.toml
yew-rocket/backend/data/: README.md
yew-rocket/backend/src/: build.rs  main.rs
yew-rocket/ui/: .gitignore  Cargo.toml  index.html
yew-rocket/ui/src/: main.rs
yew-rocket/ui/src/pages/: home.rs
