[package]
name = "lzw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1.0"
base64 = "0.21.2"
clap = { version = "4.3.4", features = ["derive"] }
enum-iterator = "1.4.1"
strum = "0.25.0"
strum_macros = "0.25.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-test = "0.2.4"

mutable_trie = { path = "../mutable-trie" }

[dev-dependencies]
criterion="0.3"

[[bench]]
name = "lzw_trie_benchmark"
harness = false
